[package]
authors = ["Jakub Pastuszek <jpastuszek@gmail.com>"]
build = "build.rs"
name = "varnishslog"
version = "0.7.2-alpha.0"
description = "Reads Varnish Cache VSL (binary) log stream and produces structured log records in JSON format"
repository = "https://github.com/jpastuszek/varnishslog"
documentation = "https://docs.rs/varnishslog"
readme = "README.md"
keywords = ["varnish", "log"]
categories = ["command-line-utilities"]
license = "MIT"

exclude = ["logs/*", "logs-new/*", "callgrind*"]

[[bench]]
harness = false
name = "stream_buf"

[[bench]]
harness = false
name = "access_log"

[build-dependencies]
serde_codegen = "0.8.4"

[dependencies]
assert_matches = "1.2.0"
bitflags = "0.7.0"
boolinator = "0.1.0"
chrono = "0.2.25"
clap = "2.30.0"
env_logger = "0.3.4"
flexi_logger = "0.5.0"
fnv = "1.0.5"
linked-hash-map = "0.3.0"
log = "0.3.6"
nom = "1.2.4"
quick-error = "1.1.0"
serde = "0.8.4"
serde_json = "0.8.1"
time = "0.1.35"

[dev-dependencies]
bencher = "0.1.1"

[profile]

[profile.bench]
codegen-units = 1
debug-assertions = false
opt-level = 3
lto = true

[profile.release]
codegen-units = 1
debug-assertions = false
opt-level = 3
lto = true
