[package]
authors = ["Jakub Pastuszek <jpastuszek@gmail.com>"]
name = "varnishslog"
version = "0.8.1-alpha.0"
description = "Reads Varnish Cache VSL (binary) log stream and produces structured log records in JSON format"
repository = "https://github.com/jpastuszek/varnishslog"
documentation = "https://docs.rs/varnishslog"
readme = "README.md"
keywords = ["varnish", "log"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2018"

exclude = ["logs/*", "logs-new/*", "callgrind*"]

[[bench]]
harness = false
name = "stream_buf"

[[bench]]
harness = false
name = "access_log"

[dependencies]
assert_matches = "1.2.0"
bitflags = "1.2.1"
boolinator = "2.4.0"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.9.0"
flexi_logger = "0.18.0"
fnv = "1.0.7"
linked-hash-map = "0.5.4"
log = "0.4.14"
nom = "1.2.4"
quick-error = "2.0.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
bencher = "0.1.1"

[profile]

[profile.bench]
codegen-units = 1
debug-assertions = false
opt-level = 3
lto = true

[profile.release]
codegen-units = 1
debug-assertions = false
opt-level = 3
lto = true
